WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270926
REGRESSION (
268173@main
): Safari rendered this website as all white
https://bugs.webkit.org/show_bug.cgi?id=270926
Summary
REGRESSION (268173@main): Safari rendered this website as all white
Matt Woodrow
Reported
2024-03-13 12:06:52 PDT
<
rdar://123983879
> This website is rendering as solid white in Safari
https://www.bdiusa.com/products/corridor-8179-modern-tv-stand-entertainment-center#product-specs
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-03-13 12:12:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25833
EWS
Comment 2
2024-03-18 14:02:26 PDT
Committed
276294@main
(afd16103076c): <
https://commits.webkit.org/276294@main
> Reviewed commits have been landed. Closing PR #25833 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug